--- a/serverless.yml
+++ b/serverless.yml
@@ -47,6 +47,7 @@ provider:
 functions:
   entry:
     handler: handler.entry
+    description: Description of the function
   test:
     handler: handler.test
 
