--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,7 @@
 {
   "plugins": ["transform-runtime"],
-  "presets": ["es2015", "stage-0"]
+  "presets": [
+    ["env", { "node": "8.10" }],
+    "stage-0"
+  ]
 }
