--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "aws-lambda-boilerplate",
+  "name": "aws-sample-lambda",
   "version": "0.0.1",
   "description": "",
-  "main": "index.js",
+  "main": "src/handler.js",
   "scripts": {
-    "test": "babel-node test/run.js"
+    "test": "babel src -d dist"
   },
   "author": "",
   "license": "ISC",
@@ -12,21 +12,25 @@
     "babel-cli": "latest",
     "babel-core": "latest",
     "babel-eslint": "latest",
-    "babel-loader": "7.1.1",
+    "babel-loader": "latest",
     "babel-plugin-transform-runtime": "latest",
-    "babel-preset-es2015": "latest",
+    "babel-preset-env": "latest",
     "babel-preset-stage-0": "latest",
-    "eslint": "latest",
+    "dotenv": "^4.0.0",
     "eslint-config-airbnb": "latest",
     "eslint-config-es2015": "latest",
     "eslint-plugin-import": "latest",
     "eslint-plugin-jasmine": "latest",
     "jasmine": "latest",
-    "serverless-webpack": "1.0.0-rc.4",
-    "webpack": "latest"
+    "json-loader": "latest",
+    "serverless-offline": "latest",
+    "serverless-webpack": "latest",
+    "webpack": "latest",
+    "webpack-node-externals": "latest"
   },
   "dependencies": {
-    "babel-runtime": "latest",
-    "json-loader": "latest"
+    "eslint": "^4.19.1",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.9.1"
   }
 }
